# kanban-board

./: .gitignore  README.md  async_kanban_board.py  main.py  overview.md  pyproject.toml
kanban/: api.py  assistants.py  board.py  domain.py  hooks.py
legacy/: README.md  async_kanban_board.py  kanban_board.py  test_async_kanban_board.py  test_kanban_board.py
plans/: README.md  sprint-01-hooks.md  sprint-02-reviewer.md  sprint-03-reject.md  sprint-04-5-generation-counter.md  sprint-04-stale-monitor.md  sprint-05-skills.md  sprint-06-export.md
plans/walkthought/: walkthough_sprint_1.md
plans/walkthrough/: walkthrough_sprint_2.md  walkthrough_sprint_3.md  walkthrough_sprint_4.md
test/: test_api.py  test_async_kanban_board.py  test_board.py  test_hooks.py
