[project]
name = "temp-proj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datalab-python-sdk>=0.2.3",
    "fastapi>=0.133.1",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
